# nb2fr

./: .gitignore  CHANGELOG.md  Cargo.toml  ChangeLog.md  README.adoc  README.md  REUSE.toml
.github/workflows/: ci.yml
src/: lib.rs
