# SPDX-FileCopyrightText: 2020-2026 Sébastien Helleu <flashcode@flashtux.org>
#
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "nb2fr"
description = "Convert integer number to literal French text."
version = "0.2.0-dev"
authors = ["Sébastien Helleu <flashcode@flashtux.org>"]
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://github.com/flashcode/nb2fr"
repository = "https://github.com/flashcode/nb2fr"
documentation = "https://docs.rs/nb2fr/"
edition = "2024"
