# SPDX-FileCopyrightText: 2020-2026 Sébastien Helleu <flashcode@flashtux.org>
#
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "nb2fr"
version = "0.2.0-dev"
authors = ["Sébastien Helleu <flashcode@flashtux.org>"]
edition = "2024"
description = "Convert integer number to literal French text."
documentation = "https://docs.rs/nb2fr/"
readme = "README.md"
homepage = "https://github.com/flashcode/nb2fr"
repository = "https://github.com/flashcode/nb2fr"
license = "GPL-3.0-or-later"
keywords = ["integer", "literal", "french"]
categories = ["finance", "mathematics", "value-formatting"]
